--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,26 @@
 version: '3.8'
 services:
+  flask:
+    container_name: flask
+    build:
+      context: .
+      dockerfile: Dockerfile
+    command: python app.py
+    restart: always
+    ports:
+      - 5003:5000
+    depends_on:
+      - postgres
+
   postgres:
       image: postgres:14.1-alpine
       restart: always
       environment:
-        POSTGRES_DB:       ${POSTGRES_HOST}:${POSTGRES_PORT}
+        POSTGRES_DB:       ${POSTGRES_DB_NAME}
         POSTGRES_USER:     ${POSTGRES_USERNAME}
         POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       ports:
-        - '5432:5432'
+        - '5435:5432'
       volumes:
         - postgres:/var/lib/postgresql/data
 
